--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-mcp-server",
-"type": "module",
+  "type": "module",
   "version": "1.0.0",
   "description": "A comprehensive MCP server for Discord interaction with powerful tools and features",
   "main": "dist/index_secure.js",
@@ -40,14 +40,15 @@
   },
   "homepage": "https://github.com/yourusername/discord-mcp-server#readme",
   "dependencies": {
-    "fastmcp": "^3.25.4",
-    "zod": "^3.22.4",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "fastmcp": "^3.25.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "tsx": "^4.6.0"
+    "@types/ws": "^8.18.1",
+    "tsx": "^4.6.0",
+    "typescript": "^5.3.0"
   }
 }
