feat: Implement a new Discord bot with FastMCP integration, a refined TypeScript build system, and removed obsolete test files.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
-# Token Discord du bot (OBTENEZ UN NOUVEAU TOKEN - l'ancien est compromis)
-DISCORD_TOKEN=VOTRE_NOUVEAU_TOKEN_ICI
+# Token Discord du bot (obligatoire)
+DISCORD_TOKEN=VOTRE_TOKEN_ICI
+# Alternative (reconnue automatiquement)
+DISCORD_BOT_TOKEN=VOTRE_TOKEN_ICI
 
-# ID utilisateur admin (pour les commandes admin)
-ADMIN_USER_ID=
+# ID utilisateur admin (optionnel)
+ADMIN_USER_ID=VOTRE_ID_DISCORD
+
+# IDs Discord (optionnels)
+DISCORD_CLIENT_ID=VOTRE_CLIENT_ID
+DISCORD_GUILD_ID=VOTRE_GUILD_ID
 
 # Configuration du bot
-BOT_PREFIX=!
-BOT_ACTIVITY=Playing with MCP
+NODE_ENV=production
 
 # Limites de fichiers (en octets)
 MAX_FILE_SIZE_IMAGE=26214400
