--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "discord-mcp-server",
-  "type": "module",
-  "version": "1.0.0",
+  "version": "2.0.1",
   "description": "A comprehensive MCP server for Discord interaction with powerful tools and features",
-  "main": "dist/index_secure.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "tsx src/index_secure.ts",
-    "dev": "tsx src/index_secure.ts",
+    "build": "tsc -p tsconfig.build.json",
+    "start": "node dist/index.js",
+    "dev": "node dist/index.js",
     "start:bridge": "node scripts/start.js",
-    "start:original": "node dist/index.js",
-    "check": "node -e \"import('./src/config.js').then(m=>console.log('✅ Configuration OK')).catch(e=>{console.error('❌ Configuration:',e.message);process.exit(1)})\"",
+    "watch": "tsx watch src/index.ts",
+    "check": "node -e \"require('./src/config.js').then(m=>console.log('✅ Configuration OK')).catch(e=>{console.error('❌ Configuration:',e.message);process.exit(1)})\"",
     "test": "node test_complet.js",
-    "clean": "rm -rf dist && rm -f *.log"
+    "clean": "node -e \"const fs=require('fs');if(fs.existsSync('dist'))fs.rmSync('dist',{recursive:true});const files=fs.readdirSync('.').filter(f=>f.endsWith('.log'));files.forEach(f=>fs.unlinkSync(f));console.log('✅ Cleaned')\"",
+    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write src/**/*.ts",
+    "prebuild": "npm run clean",
+    "postbuild": "echo ✅ Build completed successfully",
+    "mcp:test": "node dist/index.js"
   },
   "keywords": [
     "mcp",
@@ -25,20 +30,8 @@
     "automation",
     "model-context-protocol"
   ],
-  "author": {
-    "name": "Your Name",
-    "email": "your.email@example.com",
-    "url": "https://github.com/yourusername"
-  },
+  "author": "Deamon",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/discord-mcp-server.git"
-  },
-  "bugs": {
-    "url": "https://github.com/yourusername/discord-mcp-server/issues"
-  },
-  "homepage": "https://github.com/yourusername/discord-mcp-server#readme",
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
@@ -49,6 +42,8 @@
     "@types/node": "^20.10.0",
     "@types/ws": "^8.18.1",
     "tsx": "^4.6.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "eslint": "^8.0.0",
+    "prettier": "^3.0.0"
   }
 }
