--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/ws": "^8.18.1",
-    "tsx": "^4.6.0",
-    "typescript": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "eslint": "^8.0.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "tsx": "^4.6.0",
+    "typescript": "^5.3.0"
   }
 }
