--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "A comprehensive MCP server for Discord interaction with powerful tools and features",
   "main": "dist/index.js",
   "type": "module",
+  "author": "Deamon",
+  "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js",
-    "dev": "node dist/index.js",
+    "dev": "tsx watch src/index.ts",
     "start:bridge": "node scripts/start.js",
-    "watch": "tsx watch src/index.ts",
-    "check": "node -e \"require('./src/config.js').then(m=>console.log('✅ Configuration OK')).catch(e=>{console.error('❌ Configuration:',e.message);process.exit(1)})\"",
+    "check": "node -e \"require('./src/config.js').then(m=>console.log('Configuration OK')).catch(e=>{console.error('Configuration:',e.message);process.exit(1)})\"",
     "test": "node test_complet.js",
-    "clean": "node -e \"const fs=require('fs');if(fs.existsSync('dist'))fs.rmSync('dist',{recursive:true});const files=fs.readdirSync('.').filter(f=>f.endsWith('.log'));files.forEach(f=>fs.unlinkSync(f));console.log('✅ Cleaned')\"",
+    "clean": "node -e \"const fs=require('fs');if(fs.existsSync('dist'))fs.rmSync('dist',{recursive:true});const files=fs.readdirSync('.').filter(f=>f.endsWith('.log'));files.forEach(f=>fs.unlinkSync(f));console.log('Cleaned')\"",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "prebuild": "npm run clean",
-    "postbuild": "echo ✅ Build completed successfully",
+    "postbuild": "echo Build completed successfully",
     "mcp:test": "node dist/index.js"
   },
   "keywords": [
@@ -30,8 +31,6 @@
     "automation",
     "model-context-protocol"
   ],
-  "author": "Deamon",
-  "license": "MIT",
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
