feat: Add Discord mention validation, SVG→PNG conversion, and embed improvements
- Add validateDiscordMentions() function for strict mention format validation
- Add generateMentionErrorMessage() for detailed error messages by type (user/channel/role)
- Implement automatic SVG→PNG conversion for authorIcon and footerIcon using sharp
- Add guidance messages in tool descriptions for proper Discord mention usage
- Clarify that authorName/footerText do NOT support mentions, only description does
- Clean up test files and remove redundant documentation from root
- Remove hardcoded tokens from test files

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ nul
 # Build et dépendances
 node_modules/
 dist/
+dist/data/              # Données runtime persitées (boutons, sondages, etc.)
 build/
 
 # Fichiers temporaires
@@ -48,8 +49,13 @@ README_FINAL.md
 # pnpm-lock.yaml
 
 # Data et fichiers de configuration locale
-data/
+data/                    # Données runtime (boutons, sondages, moderation, etc.)
 config/local.json
+
+# Fichiers de statut runtime
+discord-status.json
+embed-analytics.json
+embed-templates.json
 
 # Certificats et clés
 *.pem
