--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-mcp-server",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "A comprehensive MCP server for Discord interaction with powerful tools and features",
   "main": "dist/index.js",
   "type": "module",
@@ -35,6 +35,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "fastmcp": "^3.25.4",
+    "sharp": "^0.34.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
