feat: Implement a unified image listing and retrieval tool with expanded categories and introduce persistence utilities for various Discord bot features.

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,8 @@ README_FINAL.md
 
 # Data et fichiers de configuration locale
 data/                  
-data
+data    
+serveur_discord\data
 # Fichiers de statut runtime
 discord-status.json
 embed-analytics.json
